refactor: migrate AI integration from DashScope to OpenAI-compatible API
  - Replace dashscope-sdk-java with simple-openai (v3.9.0)
  - Support OpenAI, DeepSeek, Gemini, and other compatible providers
  - Better overseas server compatibility and lower costs
  - Update configuration for flexible AI model selection