@@ -4,84 +4,89 @@ import static com.memes.util.GsonUtil.extractJsonFromModelOutput;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.context.annotation.Lazy;
+import org.springframework.context.annotation.Profile;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StreamUtils;
 
-import com.alibaba.dashscope.aigc.multimodalconversation.MultiModalConversation;
-import com.alibaba.dashscope.aigc.multimodalconversation.MultiModalConversationParam;
-import com.alibaba.dashscope.aigc.multimodalconversation.MultiModalConversationResult;
-import com.alibaba.dashscope.aigc.multimodalconversation.MultiModalConversationUsage;
-import com.alibaba.dashscope.common.MultiModalMessage;
-import com.alibaba.dashscope.common.Role;
-import com.alibaba.dashscope.common.Status;
-import com.alibaba.dashscope.exception.ApiException;
 import com.google.protobuf.util.JsonFormat;
 import com.memes.model.pojo.MediaContent;
 import com.memes.model.transport.LLMReviewResult;
 import com.memes.model.transport.ReviewOutcome;
 import com.memes.service.MediaContentService;
-import com.memes.util.GsonUtil;
 
+import io.github.sashirestela.openai.SimpleOpenAI;
+import io.github.sashirestela.openai.domain.chat.ChatRequest;
+import io.github.sashirestela.openai.domain.chat.ChatResponse;
+import io.github.sashirestela.openai.domain.chat.message.ChatMsg;
+import io.github.sashirestela.openai.domain.chat.message.ChatMsgUser;
+import io.github.sashirestela.openai.domain.chat.message.ImageUrl;
+import io.github.sashirestela.openai.domain.chat.message.ImageUrl.Detail;
 import io.micrometer.core.instrument.MeterRegistry;
 import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 @Service
 @Lazy(value = false)
-@ConditionalOnProperty(value = "spring.profiles.active", havingValue = "prod")
+@Profile("prod")
 public class AiReviewer {
 
     final MeterRegistry registry;
 
-    private static final String MODEL = "qwen-vl-max-latest";
-
-    private static final String SYSTEM = Role.SYSTEM.getValue();
-
-    private static final String USER = Role.USER.getValue();
-
-    private static final String TYPE_TEXT = "text";
-
-    private static final String TYPE_IMAGE = "image";
-
-    private static final String REVIEW_PROMPT = "请审核这个图片";
-
     private static String SYS_PROMPT;
+    private static final String REVIEW_PROMPT = "请审核这个图片";
 
     @Value("classpath:prompt.xml")
     private Resource promptResource;
 
-    @PostConstruct
-    public void init() throws IOException {
-        SYS_PROMPT = StreamUtils.copyToString(promptResource.getInputStream(), StandardCharsets.UTF_8);
-        startReview();
-    }
-
-    @Value("${dashscope.apiKey}")
+    @Value("${openai.apiKey}")
     private String apiKey;
 
+    @Value("${openai.baseUrl}")
+    private String baseUrl;
+
+    @Value("${openai.visionModel}")
+    private String visionModel;
+
+    private SimpleOpenAI openAI;
     private final MediaContentService mediaContentService;
     private final ExecutorService reviewExecutor = Executors.newSingleThreadExecutor(r -> {
         Thread thread = new Thread(r);
         thread.setName("ai-review-thread");
         return thread;
     });
-    private final MultiModalConversation conv = new MultiModalConversation();
 
     public AiReviewer(MeterRegistry registry, MediaContentService mediaContentService) {
         this.registry = registry;
         this.mediaContentService = mediaContentService;
+    }
+
+    @PostConstruct
+    public void init() throws IOException {
+        SYS_PROMPT = StreamUtils.copyToString(promptResource.getInputStream(), StandardCharsets.UTF_8);
+
+        // Initialize OpenAI client with custom base URL support
+        openAI = SimpleOpenAI.builder()
+            .apiKey(apiKey)
+            .baseUrl(baseUrl)
+            .build();
+
+        log.info("OpenAI client initialized with base URL: {}, model: {}", baseUrl, visionModel);
+        startReview();
+    }
+
+    @PreDestroy
+    public void cleanup() {
+        reviewExecutor.shutdownNow();
     }
 
     private void startReview() {
@@ -107,46 +112,46 @@ public class AiReviewer {
     }
 
     /**
-     * 调用 LLM API
+     * 调用 OpenAI Vision API 审核图片
      *
-     * @param url
-     *            图片链接
+     * @param url 图片链接
      * @return LLMReviewResult
      */
     public LLMReviewResult callWithRemoteImage(String url) {
         try {
-            log.debug("Calling LLM API with URL: {}", url);
+            log.debug("Calling OpenAI Vision API with URL: {}", url);
 
-            // 直接内联创建消息，移除单独的方法
-            List<MultiModalMessage> messages = Arrays
-                .asList(
-                    // 系统消息
-                    MultiModalMessage.builder().role(SYSTEM).content(List.of(Collections.singletonMap(TYPE_TEXT, SYS_PROMPT))).build(),
-                    // 用户消息
-                    MultiModalMessage
-                        .builder()
-                        .role(USER)
-                        .content(Arrays.asList(Collections.singletonMap(TYPE_IMAGE, url), Collections.singletonMap(TYPE_TEXT, REVIEW_PROMPT)))
-                        .build());
+            // Create chat request with vision capability
+            var chatRequest = ChatRequest.builder()
+                .model(visionModel)
+                .messages(List.of(
+                    ChatMsg.SystemMessage.of(SYS_PROMPT),
+                    ChatMsgUser.of(
+                        ChatMsgUser.UserContent.of(REVIEW_PROMPT),
+                        ChatMsgUser.UserContent.of(ImageUrl.of(url, Detail.AUTO))
+                    )
+                ))
+                .temperature(0.0)
+                .maxTokens(1000)
+                .build();
 
-            // 创建参数
-            MultiModalConversationParam param = MultiModalConversationParam.builder().apiKey(apiKey).model(MODEL).messages(messages).build();
+            // Call OpenAI API
+            ChatResponse response = openAI.chatCompletions()
+                .create(chatRequest)
+                .join();
 
-            // 调用 API
-            MultiModalConversationResult result = conv.call(param);
+            // Handle usage statistics
+            var usage = response.getUsage();
+            log.info("OpenAI API Usage: prompt_tokens={}, completion_tokens={}, total_tokens={}",
+                usage.getPromptTokens(), usage.getCompletionTokens(), usage.getTotalTokens());
 
-            // 处理使用量统计
-            MultiModalConversationUsage usage = result.getUsage();
-            log.info("LLM API Usage: {}", GsonUtil.toJson(usage));
-            registry.counter("total_token", "model", MODEL).increment(usage.getTotalTokens());
-            registry.counter("input_token", "model", MODEL).increment(usage.getInputTokens());
-            registry.counter("image_token", "model", MODEL).increment(usage.getImageTokens());
-            registry.counter("output_token", "model", MODEL).increment(usage.getOutputTokens());
-            log.info("Sent LLM Usage Data to message queue.");
+            registry.counter("total_token", "model", visionModel).increment(usage.getTotalTokens());
+            registry.counter("input_token", "model", visionModel).increment(usage.getPromptTokens());
+            registry.counter("output_token", "model", visionModel).increment(usage.getCompletionTokens());
+            log.info("Sent LLM Usage Data to metrics.");
 
-            // 提取并解析模型输出
-            String modelOut = result.getOutput().getChoices().getFirst().getMessage().getContent().getFirst().get(TYPE_TEXT).toString();
-
+            // Extract and parse model output
+            String modelOut = response.firstContent();
             String jsonStr = extractJsonFromModelOutput(modelOut);
             log.debug("Raw LLM Output: {}", jsonStr);
 
@@ -154,19 +159,23 @@ public class AiReviewer {
             JsonFormat.parser().merge(jsonStr, builder);
             return builder.build();
 
-        } catch (ApiException e) {
-            Status status = e.getStatus();
-            if (status.getStatusCode() == 400) {
-                registry.counter("llm_inappropriate_content", "model", MODEL).increment();
-                return LLMReviewResult.newBuilder().setOutcome(ReviewOutcome.FLAGGED).setFailureReason(e.getStatus().getMessage()).build();
-            }
-            throw e;
         } catch (Exception e) {
-            log.error("Error calling LLM API. URL: {}", url, e);
-            registry.counter("llm_api_error", "model", MODEL).increment();
-            return LLMReviewResult.newBuilder().setOutcome(ReviewOutcome.FLAGGED).setFailureReason("LLM API call failed").build();
-        } finally {
-            log.debug("LLM API call completed.");
+            log.error("Error calling OpenAI Vision API. URL: {}", url, e);
+            registry.counter("llm_api_error", "model", visionModel).increment();
+
+            String errorMsg = e.getMessage();
+            if (errorMsg != null && (errorMsg.contains("content_policy_violation") || errorMsg.contains("inappropriate"))) {
+                registry.counter("llm_inappropriate_content", "model", visionModel).increment();
+                return LLMReviewResult.newBuilder()
+                    .setOutcome(ReviewOutcome.FLAGGED)
+                    .setFailureReason("Content policy violation: " + errorMsg)
+                    .build();
+            }
+
+            return LLMReviewResult.newBuilder()
+                .setOutcome(ReviewOutcome.FLAGGED)
+                .setFailureReason("OpenAI API call failed: " + errorMsg)
+                .build();
         }
     }
 
@@ -184,6 +193,7 @@ public class AiReviewer {
         // 执行图片审核
         log.info("正在审核图片内容：{}", mediaContent.getId());
         LLMReviewResult result = callWithRemoteImage(mediaContent.getDataContent());
+
         // 记录指标
         registry.counter("llm_review_count", "outcome", result.getOutcome().name()).increment();
         log.info("AI 审核结果：{} - 媒体 ID: {}", result.getOutcome().name(), mediaContent.getId());
